refactor(text): use native List.of in Messenger
replaces legacy Collections.singletonList with native List.of